--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@stripe/stripe-js": "^3.3.0",
     "@types/mongoose": "^5.11.97",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.365.0",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
+    "next-cloudinary": "^6.4.0",
     "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "stripe": "^14.24.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
